--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html hang="en-CN">
 
 <head>
-    <title>三翼工作室</title>
+    <title>css动画</title>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <link type="text/css" href="css/style.css" rel="stylesheet">
